force-app/main/default/objects/Case/fields/PMC_SS_IssueReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_IssueReason__c</fullName>
    <description>Specifies the reason of the issue</description>
    <inlineHelpText>Contract Cancellation, Product request, Credit Request, Financial Solution and Anticipated Billing are for Brazil users ONLY...</inlineHelpText>
    <label>Issue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Account Issues</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Banking Edits</fullName>
            </value>
            <value>
                <fullName>Call by Date</fullName>
            </value>
            <value>
                <fullName>Cambio Exhange</fullName>
            </value>
            <value>
                <fullName>Change to loading priorities</fullName>
            </value>
            <value>
                <fullName>COA Setup / Change</fullName>
            </value>
            <value>
                <fullName>Consignment</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <label>Contract Cancellation</label>
            </value>
            <value>
                <fullName>Credit Note Request</fullName>
            </value>
            <value>
                <fullName>Credit Request</fullName>
            </value>
            <value>
                <fullName>Customer Issue</fullName>
            </value>
            <value>
                <fullName>Deactivation</fullName>
            </value>
            <value>
                <fullName>Debit Note Request</fullName>
            </value>
            <value>
                <fullName>Delivery Delay</fullName>
            </value>
            <value>
                <fullName>Demurrage</fullName>
            </value>
            <value>
                <fullName>Diversion</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Donation Order/Bonus</fullName>
            </value>
            <value>
                <fullName>Driver Verification/Change</fullName>
            </value>
            <value>
                <fullName>Equipment Failure</fullName>
            </value>
            <value>
                <fullName>Export Documentation</fullName>
            </value>
            <value>
                <fullName>Export prioritization</fullName>
            </value>
            <value>
                <fullName>Financial Solution</fullName>
            </value>
            <value>
                <fullName>IDOC Failures</fullName>
            </value>
            <value>
                <fullName>Include Script CIF</fullName>
            </value>
            <value>
                <fullName>Incorrect Destination</fullName>
            </value>
            <value>
                <fullName>Incorrect Label</fullName>
            </value>
            <value>
                <fullName>Incorrect Product</fullName>
            </value>
            <value>
                <fullName>Incorrect UOM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>