force-app/main/default/objects/Case/fields/PMC_SS_Lead__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>