force-app/main/default/objects/Case/fields/PMC_SS_LoadingDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LoadingDate__c</fullName>
    <description>Date affected load was loaded.</description>
    <label>Loading Date</label>
    <type>Date</type>
</CustomField>