force-app/main/default/objects/Case/fields/PMC_SS_Location__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location</description>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases (Location)</relationshipLabel>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>