force-app/main/default/objects/Case/fields/PMC_SS_LostRevenueDetail__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LostRevenueDetail__c</fullName>
    <label>Lost Revenue Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cancel &amp; Rebill Delta</fullName>
            </value>
            <value>
                <fullName>Failed Delivery</fullName>
            </value>
            <value>
                <fullName>Missed Orders</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>