force-app/main/default/objects/Case/fields/PMC_SS_LostRevenueLevel1__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LostRevenueLevel1__c</fullName>
    <inlineHelpText>To total Lost Revenue to Parent Quality and Non-Quality</inlineHelpText>
    <label>Lost Revenue Level 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>