force-app/main/default/objects/Case/fields/PMC_SS_LostRevenueLevel3__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LostRevenueLevel3__c</fullName>
    <label>Lost Revenue Level 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>