force-app/main/default/objects/Case/fields/PMC_SS_Lot__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Lot__c</fullName>
    <label>Lot Claimed</label>
    <length>15</length>
    <type>Text</type>
</CustomField>