force-app/main/default/objects/Case/fields/PMC_SS_MasterDataRejectionDetails__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MasterDataRejectionDetails__c</fullName>
    <description>Reason why it was rejected should be on the task - Pull the information from the  Master Data Rejection Details onto the task</description>
    <label>Master Data Rejection Details</label>
    <type>TextArea</type>
</CustomField>