force-app/main/default/objects/Case/fields/PMC_SS_MDMStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MDMStatus__c</fullName>
    <label>MDM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waiting for Customer Form Completion</fullName>
            </value>
            <value>
                <fullName>Waiting for Master Data Management</fullName>
            </value>
            <value>
                <fullName>Waiting for Product Form Completion</fullName>
            </value>
            <value>
                <fullName>Waiting for Product Costing Setup</fullName>
            </value>
            <value>
                <fullName>Waiting for Product Routing Creation and Assignment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>