force-app/main/default/objects/Case/fields/PMC_SS_MilestoneIsNearby__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MilestoneIsNearby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Milestone Is Nearby</label>
    <type>Checkbox</type>
</CustomField>