force-app/main/default/objects/Case/fields/PMC_SS_MilestoneIsViolated__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MilestoneIsViolated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>it will be checked when the first contact milestone is missed</description>
    <label>Milestone Is Violated</label>
    <type>Checkbox</type>
</CustomField>