force-app/main/default/objects/Case/fields/PMC_SS_ModeofTransportation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ModeofTransportation__c</fullName>
    <label>Mode of Transportation Do Not Use</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Inventory Transfer</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>