force-app/main/default/objects/Case/fields/PMC_SS_MOT__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MOT__c</fullName>
    <description>The mode of transportation for a shipping case</description>
    <label>Mode of Transportation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Barge</fullName>
            </value>
            <value>
                <fullName>Container</fullName>
            </value>
            <value>
                <fullName>Rail</fullName>
            </value>
            <value>
                <fullName>Truck</fullName>
            </value>
            <value>
                <fullName>Vessel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>