force-app/main/default/objects/Case/fields/PMC_SS_NationalDirector__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NationalDirector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>National Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>