force-app/main/default/objects/Case/fields/PMC_SS_NewContract__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NewContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases (New Contract)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>