force-app/main/default/objects/Case/fields/PMC_SS_NewDestinationLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NewDestinationLocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Location Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either New Destination (Location) or New Destination (Ship To) but cannot select both.</description>
    <label>New Destination(Location)</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Cases (New Destination(Location))</relationshipLabel>
    <relationshipName>Cases3</relationshipName>
    <type>Lookup</type>
</CustomField>