force-app/main/default/objects/Case/fields/PMC_SS_NewDestinationShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NewDestinationShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Account Object displayed when Issue Reason selected is &quot;Incorrect Destination&quot; or &quot;Diversion&quot;. User must select either New Destination (Location) or New Destination (Ship To) but cannot select both.</description>
    <label>New Destination(Ship To)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (New Destination(Ship To))</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>