force-app/main/default/objects/Case/fields/PMC_SS_Nitrogen__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Nitrogen__c</fullName>
    <description>Percent of Nitrogen to blend</description>
    <label>Nitrogen %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>