force-app/main/default/objects/Case/fields/PMC_SS_Offspec_Sale__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Offspec_Sale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offspec Sale</label>
    <type>Checkbox</type>
</CustomField>