force-app/main/default/objects/Case/fields/PMC_SS_OperationsReportable__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OperationsReportable__c</fullName>
    <description>Picklist to determine if quality case will be reportable towards a Mosaic Production Facility and will be counted as an “Operations Caused” quality case on monthly scorecards</description>
    <label>Operations Reportable?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>