force-app/main/default/objects/Case/fields/PMC_SS_Order__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field stores the look-up to the Order record against which the case is being created</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>