force-app/main/default/objects/Case/fields/PMC_SS_OrderClassification__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OrderClassification__c</fullName>
    <inlineHelpText>This field indicates whether a New Order was created in SAP or if the existing Order in SAP was updated.</inlineHelpText>
    <label>Order Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Order</fullName>
            </value>
            <value>
                <fullName>Updated Order</fullName>
            </value>
            <value>
                <fullName>No Order Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>