force-app/main/default/objects/Case/fields/PMC_SS_OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Link to Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>