force-app/main/default/objects/Case/fields/PMC_SS_OrderSummary__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OrderSummary__c</fullName>
    <description>Specifies the Order Summary that was entered when the case was created</description>
    <label>Order Summary</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>