force-app/main/default/objects/Case/fields/PMC_SS_OriginalContract__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OriginalContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases2</relationshipName>
    <type>Lookup</type>
</CustomField>