force-app/main/default/objects/Case/fields/PMC_SS_OriginalInvoiceAmount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OriginalInvoiceAmount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Original Invoice Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>