force-app/main/default/objects/Case/fields/PMC_SS_OtherAtFaultParty__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OtherAtFaultParty__c</fullName>
    <description>Field to add other at fault party.</description>
    <label>Other At Fault Party</label>
    <length>100</length>
    <type>Text</type>
</CustomField>