force-app/main/default/objects/Case/fields/PMC_SS_OtherIssueReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OtherIssueReason__c</fullName>
    <description>Specifies the other issue reason.</description>
    <label>Other Issue Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>