force-app/main/default/objects/Case/fields/PMC_SS_OtherReOpenReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OtherReOpenReason__c</fullName>
    <label>Other Re-Open Reason</label>
    <type>TextArea</type>
</CustomField>