force-app/main/default/objects/Case/fields/PMC_SS_OwnersCountry__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OwnersCountry__c</fullName>
    <formula>Owner:User.Country</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner’s Country</label>
    <type>Text</type>
</CustomField>