force-app/main/default/objects/Case/fields/PMC_SS_PaymentRequestType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PaymentRequestType__c</fullName>
    <label>Payment Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Check Request</fullName>
            </value>
            <value>
                <fullName>On Account</fullName>
            </value>
            <value>
                <fullName>Wire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>