force-app/main/default/objects/Case/fields/PMC_SS_PGIDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PGIDate__c</fullName>
    <label>PGI Date</label>
    <type>Date</type>
</CustomField>