force-app/main/default/objects/Case/fields/PMC_SS_Phosphorous__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Phosphorous__c</fullName>
    <description>Percent of Phosphorous to blend</description>
    <label>Phosphorous %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>