force-app/main/default/objects/Case/fields/PMC_SS_Plant__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Plant__c</fullName>
    <label>Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>