force-app/main/default/objects/Case/fields/PMC_SS_PointofFailureSubCategory__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PointofFailureSubCategory__c</fullName>
    <label>Point of Failure Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Dismissed or None</fullName>
            </value>
            <value>
                <fullName>Operations Material Handling</fullName>
            </value>
            <value>
                <fullName>Operations Production</fullName>
            </value>
            <value>
                <fullName>Supply Chain Warehousing</fullName>
            </value>
            <value>
                <fullName>Transportation Mosaic</fullName>
            </value>
            <value>
                <fullName>Transportation Vendor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>