force-app/main/default/objects/Case/fields/PMC_SS_PostInvestigationCause__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PostInvestigationCause__c</fullName>
    <description>Select the most appropriate cause category and update throughout the investigation process as necessary</description>
    <label>Post Investigation Cause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adulteration</fullName>
            </value>
            <value>
                <fullName>Bagging Issue</fullName>
            </value>
            <value>
                <fullName>Complaint Dismissed</fullName>
            </value>
            <value>
                <fullName>Crust</fullName>
            </value>
            <value>
                <fullName>Customer Caused</fullName>
            </value>
            <value>
                <fullName>Dust</fullName>
            </value>
            <value>
                <fullName>Failure to Meet Specification</fullName>
            </value>
            <value>
                <fullName>Fines</fullName>
            </value>
            <value>
                <fullName>Foreign Contamination</fullName>
            </value>
            <value>
                <fullName>Lumps</fullName>
            </value>
            <value>
                <fullName>Multiple Factors</fullName>
            </value>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Wet Product</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
            <value>
                <fullName>Other Reason</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>