force-app/main/default/objects/Case/fields/PMC_SS_PostInvestigationQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PostInvestigationQuantity__c</fullName>
    <label>Post-Investigation Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>