force-app/main/default/objects/Case/fields/PMC_SS_Potassium__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Potassium__c</fullName>
    <description>Percent of Potassium to blend</description>
    <label>Potassium %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>