force-app/main/default/objects/Case/fields/PMC_SS_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Product_Group__c</fullName>
    <formula>TEXT(PMC_SS_OrderProduct__r.Product2.PMC_CPQ_MaterialGroup__c)</formula>
    <label>Product Group</label>
    <type>Text</type>
</CustomField>