force-app/main/default/objects/Case/fields/PMC_SS_ProductDescription__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductDescription__c</fullName>
    <description>Brief description of the product request</description>
    <label>Product Description</label>
    <length>25</length>
    <type>Text</type>
</CustomField>