force-app/main/default/objects/Case/fields/PMC_SS_ProductionFacility__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductionFacility__c</fullName>
    <description>Text field (255) Mosaic Production Facility in question</description>
    <label>Production Facility</label>
    <type>TextArea</type>
</CustomField>