force-app/main/default/objects/Case/fields/PMC_SS_ProductIssue__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductIssue__c</fullName>
    <description>Select a more specific problem with a product when Issue Reason &quot;Product Concern&quot; is selected.</description>
    <inlineHelpText>Select a more specific problem you are facing with the product.</inlineHelpText>
    <label>Product Issue</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Adulteration</fullName>
            </value>
            <value>
                <fullName>Bagging Issue</fullName>
            </value>
            <value>
                <fullName>Complaint Dismissed</fullName>
            </value>
            <value>
                <fullName>Crust</fullName>
            </value>
            <value>
                <fullName>Dust</fullName>
            </value>
            <value>
                <fullName>Failure to Meet Specifications</fullName>
            </value>
            <value>
                <fullName>Fines</fullName>
            </value>
            <value>
                <fullName>Foreign Contamination</fullName>
            </value>
            <value>
                <fullName>Lumps</fullName>
            </value>
            <value>
                <fullName>Multiple Factors</fullName>
            </value>
            <value>
                <fullName>Other Reason</fullName>
            </value>
            <value>
                <fullName>Set-up</fullName>
            </value>
            <value>
                <fullName>Temperature</fullName>
            </value>
            <value>
                <fullName>Treatment</fullName>
            </value>
            <value>
                <fullName>Wet Product</fullName>
            </value>
            <value>
                <fullName>Wrong Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>