force-app/main/default/objects/Case/fields/PMC_SS_ProductLocation__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductLocation__c</fullName>
    <description>Enter location of product (typically the customer’s location). Need City, State, Country</description>
    <label>Product Location</label>
    <type>Address</type>
</CustomField>