force-app/main/default/objects/Case/fields/PMC_SS_ProductNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductNumber__c</fullName>
    <label>Product Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>