force-app/main/default/objects/Case/fields/PMC_SS_ProductSegment__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductSegment__c</fullName>
    <formula>Text(PMC_SS_OrderProduct__r.Product2.PMC_CPQ_ProductSegment__c)</formula>
    <label>Product Segment</label>
    <type>Text</type>
</CustomField>