force-app/main/default/objects/Case/fields/PMC_SS_ProductSegregated__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductSegregated__c</fullName>
    <description>Enter comment regarding if or how the product is segregated, if applicable</description>
    <label>Product Segregated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>