force-app/main/default/objects/Case/fields/PMC_SS_QualityActionSummary__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QualityActionSummary__c</fullName>
    <description>Enter a brief summary of mitigation actions, RCA action items, and what was done with the affected product</description>
    <label>Quality Action Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>