force-app/main/default/objects/Case/fields/PMC_SS_QualityCommitteesTechAnalysis__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QualityCommitteesTechAnalysis__c</fullName>
    <label>Quality Committee’s Tech Analysis</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>