force-app/main/default/objects/Case/fields/PMC_SS_QualityFindingsSummary__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QualityFindingsSummary__c</fullName>
    <description>Enter a brief summary of investigation findings</description>
    <label>Quality Findings Summary</label>
    <type>TextArea</type>
</CustomField>