force-app/main/default/objects/Case/fields/PMC_SS_QualityStatus__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QualityStatus__c</fullName>
    <label>Quality Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Pricing / Costs (NA)</fullName>
                <label>Awaiting Pricing / Costs</label>
            </value>
            <value>
                <fullName>Awaiting Release of Claims (NA)</fullName>
                <label>Awaiting Release of Claims</label>
            </value>
            <value>
                <fullName>Awaiting Samples / Analysis / Inspection (NA)</fullName>
                <label>Awaiting Samples / Analysis / Inspection</label>
            </value>
            <value>
                <fullName>Awaiting Shipment / Regulatory Information (NA)</fullName>
                <label>Awaiting Shipment / Regulatory Information</label>
            </value>
            <value>
                <fullName>Mitigation (NA)</fullName>
                <label>Mitigation</label>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Awaiting Details from AM</fullName>
            </value>
            <value>
                <fullName>Awaiting Sample</fullName>
            </value>
            <value>
                <fullName>Sample in Analysis</fullName>
            </value>
            <value>
                <fullName>Awaiting Committee</fullName>
            </value>
            <value>
                <fullName>Awaiting Commercial Agreement</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Investigation (NA / SA)</fullName>
                <label>Under Investigation</label>
            </value>
            <value>
                <fullName>Concluded with Customer</fullName>
            </value>
            <value>
                <fullName>Checklist &amp; Sample Delivery (SA)</fullName>
                <isActive>false</isActive>
                <label>Checklist &amp; Sample Delivery (SA)</label>
            </value>
            <value>
                <fullName>Committee Judgement (SA)</fullName>
                <isActive>false</isActive>
                <label>Committee Judgement (SA)</label>
            </value>
            <value>
                <fullName>Feedback &amp; Agreement (SA)</fullName>
                <isActive>false</isActive>
                <label>Feedback &amp; Agreement (SA)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>