force-app/main/default/objects/Case/fields/PMC_SS_QuantityClaimed__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityClaimed__c</fullName>
    <label>Quantity Claimed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>