force-app/main/default/objects/Case/fields/PMC_SS_QuickCustomerSatisfaction__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuickCustomerSatisfaction__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Toggle box checked if the quality case is considered closed with the customer.  Quality case may remain open while Mosaic internal investigation continues or follow up items are completed</description>
    <label>Quick Customer Satisfaction</label>
    <type>Checkbox</type>
</CustomField>