force-app/main/default/objects/Case/fields/PMC_SS_ReadyForDeletion__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ReadyForDeletion__c</fullName>
    <formula>IF((NOW()-  ClosedDate) &gt;=   VALUE($Label.PMC_SS_CaseRetentionPolicy)  , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ready For Deletion</label>
    <type>Checkbox</type>
</CustomField>